<resources>
    <string name="app_name">chat_app</string>
    <string name="authentication">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="entry">Вход</string>
    <string name="exit">Выход</string>
    <string name="dont_have_account">нет аккаунта?</string>
    <string name="send">Отправить</string>


    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">5U3VMdNjdZ5FlHyqHHVlwYAKAhGiJ2rY5CMCRKs6</string>
    <string name="back4app_client_key">3q4mbEdPTOo1gjB8BtLeJyDqECiEUNVEPmlFwemI</string>

</resources>