<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".authentication.view.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/authentication"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/textEditLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:background="@drawable/rounded_input"
                android:ems="10"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/textEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_input"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/buttonEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entry" />

            <TextView
                android:id="@+id/textViewNoAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textAlignment="center"
                android:textColor="@color/blue_link" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>